# ChessGame

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  ChessWindow.cpp  ChessWindow.h  King.cpp  King.h  Knignt.cpp  Pawn.cpp  Pawn.h  Pieces.cpp  Pieces.h  PiecesInclude.h  ProjetTestQt.vcxproj  ProjetTestQt.vcxproj.filters  PromotionControler.cpp  PromotionControler.h  Queen.cpp  Queen.h  README.md  Rook.cpp  TestChess.cpp  main.cpp  resources.qrc
scripts/: run.sh  runTest.sh
src/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  ChessWindow.cpp  ChessWindow.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pieces.cpp  Pieces.h  PromotionController.cpp  Queen.cpp  Queen.h  Rook.cpp  Rook.h  main.cpp
test/: CMakeLists.txt  TestChess.cpp
x64/Debug/: ProjetTestQt.exe.recipe  ProjetTestQt.vcxproj.FileListAbsolute.txt
x64/Debug/ProjetTestQt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ProjetTestQt.lastbuildstate  ProjetTestQt.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog
x64/Debug/moc/: moc_ChessWindow.cpp
x64/Debug/qmake/: qtvars_x64_Debug.props
x64/Debug/qmake/temp/: 31090C5F-C8B6-4AB4-8938-BA52842F8EB8.ProjetTestQt.designtime.idx  qtvars.vcxproj
